--- a/themes/hugo-whisper-theme/layouts/_default/single.html
+++ b/themes/hugo-whisper-theme/layouts/_default/single.html
@@ -5,7 +5,10 @@
 {{ define "main" }}
 <h1 class="title">{{.Title}}</h1>
 <div class="content {{if .Site.Params.enable_anchor_link}}{{ "anchor-link-enabled" }}{{ end }}">
-  {{.Content}}
+  {{ $content := .Content }}
+  {{ $content = replaceRE `<a href="(https?://.+)">` `<a href="$1" target="_blank">` $content | safeHTML }}
+  {{ $content = replaceRE `<a href="(mailto:.+)">` `<a href="$1" target="_blank">` $content | safeHTML }}
+  {{ $content | safeHTML }}
 </div>
 </div>
 {{ end }}
